objects/SO_Product_Offering_Relation__mdt.object
<CustomObject>
    <label>Product Offering Relation</label>
    <pluralLabel>Product Offering Relations</pluralLabel>
    <fields>
        <fullName>SO_Close_Date__c</fullName>
        <label>Close Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Stage_Name__c</fullName>
        <label>Stage Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                    <default>true</default>
                    <label>Qualified</label>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Record_type__c</fullName>
        <label>Record type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SO_Continuation</fullName>
                    <default>true</default>
                    <label>SO_Continuation</label>
                </value>
                <value>
                    <fullName>SO_Reborn</fullName>
                </value>
                <value>
                    <fullName>SO_Works_Legends</fullName>
                </value>
                <value>
                    <fullName>SO_Limited_Edition</fullName>
                </value>
                <value>
                    <fullName>SO_Classic_Bespoke</fullName>
                </value>
                <value>
                    <fullName>SO_Service</fullName>
                </value>
                <value>
                    <fullName>SO_Bespoke</fullName>
                </value>
                <value>
                    <fullName>SO_VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Product_Offering__c</fullName>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continuation</fullName>
                    <default>true</default>
                    <label>Continuation</label>
                </value>
                <value>
                    <fullName>Works Legends</fullName>
                </value>
                <value>
                    <fullName>Reborn</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
                <value>
                    <fullName>Limited Edition</fullName>
                </value>
                <value>
                    <fullName>Health Check</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Full Bespoke</fullName>
                </value>
                <value>
                    <fullName>Full Remote Bespoke</fullName>
                </value>
                <value>
                    <fullName>Paint Only</fullName>
                </value>
                <value>
                    <fullName>Exterior Only</fullName>
                </value>
                <value>
                    <fullName>Interior Only</fullName>
                </value>
                <value>
                    <fullName>Collectors Edition</fullName>
                </value>
                <value>
                    <fullName>Armoured</fullName>
                </value>
                <value>
                    <fullName>Special Commission</fullName>
                </value>
                <value>
                    <fullName>Halo</fullName>
                </value>
                <value>
                    <fullName>Core Vehicle</fullName>
                </value>
                <value>
                    <fullName>Parts Fitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Calculate_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Capacity</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>